// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsService should fetch a single setting by ID 1`] = `
{
  "createdAt": 2020-01-01T00:00:00.000Z,
  "id": "1",
  "modifiedAt": 2020-02-01T00:00:00.000Z,
  "name": "setting1",
  "settingRestriction": null,
  "value": "value1",
}
`;

exports[`SettingsService should fetch a single setting by ID 2`] = `
{
  "where": {
    "id": "1",
  },
}
`;

exports[`SettingsService should list settings 1`] = `
[
  {
    "createdAt": 2020-01-01T00:00:00.000Z,
    "id": "1",
    "modifiedAt": 2020-02-01T00:00:00.000Z,
    "name": "setting1",
    "settingRestriction": null,
    "value": "value1",
  },
  {
    "createdAt": 2020-01-01T00:00:00.000Z,
    "id": "2",
    "modifiedAt": 2020-02-01T00:00:00.000Z,
    "name": "setting2",
    "settingRestriction": null,
    "value": "value2",
  },
]
`;

exports[`SettingsService should list settings 2`] = `
{
  "orderBy": {
    "createdAt": "desc",
  },
  "where": undefined,
}
`;

exports[`SettingsService should update settings 1`] = `
{
  "createdAt": Any<Date>,
  "id": Any<String>,
  "modifiedAt": Any<Date>,
  "name": "allowCommentEditing",
  "settingRestriction": {
    "allowedValues": {
      "boolChoice": true,
    },
  },
  "value": false,
}
`;
